--- a/Rapport/content/indholdsfortegnelse.tex
+++ b/Rapport/content/indholdsfortegnelse.tex
@@ -10,9 +10,9 @@
 \centering
 \begin{tabular}{l|l}
 Hvad&Sti\\\hline
-Rapporten&Master\_doc.pdf\\
+Rapporten&Rapport.pdf\\
 Koden til mikrocontrolleren &uC\\
-Biblioteker til C koden&uC/libs\\
+Biblioteker til C-koden&uC/libs\\
 VHDL kode til FPGA &FPGA\\
 Test af PID &test/simulering\\
 Test af mikrocontrollerens timing&test/Test af timing uC\\
@@ -23,7 +23,7 @@ Koordinater til koden &test/koordinater\\
 \caption*{Indhold i projektmappe. \label{tb:CD}}
 \end{figure}
 
-Vores porjektmappe findes på:  https://github.com/mikkeljae/SDU\_ROBTEK4\_PAN-AND-TILT
+Projektmappen findes på:  \url{https://github.com/mikkeljae/SDU_ROBTEK4_PAN-AND-TILT}.
 
 
  \listoftodos
