fjernet figur indexering for appendix

--- a/Rapport/content/app_DCmotor.tex
+++ b/Rapport/content/app_DCmotor.tex
@@ -192,7 +192,7 @@ vil impedansen \(\mathbf{Z_m}\) af DC-motoren være givet ved ligning \ref{eq:zm
 \begin{circuitikz}
 \input{graphics/figE2metode2.tex}  
 \end{circuitikz}
-\caption[Rotationslåst motor med $R_s1$]{Rotationslåst motor, i serie med en modstand \(R_{s1}\) og en AC-forsyning.}
+\caption{Rotationslåst motor, i serie med en modstand \(R_{s1}\) og en AC-forsyning.}
 \label{fig:eksperiment2metode2}
 \end{figure}
 
