--- a/Rapport/content/appen.tex
+++ b/Rapport/content/appen.tex
@@ -1,6 +1,7 @@
 \part{Appendices}
 \appendix
-\addtocontents{toc}{\protect\setcounter{tocdepth}{1}} % Antal niveau af appendix i indholdsfortegnelsen.
+\addtocontents{toc}{\protect\setcounter{tocdepth}{1}}% Antal niveau af appendix i indholdsfortegnelsen.
+\captionsetup{list=no}%remove figures from appendix on list of content
 \input{./content/problemequation}
 \include{./content/app_DCmotor}
 \include{./content/app_panandtiltparameter}
