--- a/Rapport/content/indledning.tex
+++ b/Rapport/content/indledning.tex
@@ -15,7 +15,7 @@ I fjerde del af rapporten beskrives justeringen af regulatorerne og tests af sys
 %Desuden skal kommunikation mellem pan \& tilt systemet og mikrocontrolleren oprettes.
 %En FPGA  bruges til at læse systemets position og generere ønsket PWM-signal til motorerne. 
 %Denne skal kunne kommunikere med microcontrolleren vha. en FPGA. 
-Til sidst konkluderes projektet og muligheder for videre arbejde diskuteres.
+Til sidst konkluderes projektet og muligheder for videreudvikling diskuteres.
 Projektet udføres i overensstemmelse med det tilhørende projektoplæg, der er vedlagt 
 som bilag.
 % \todo[inline,color = pink, author= Mikkel]{1. forsøg på indledning. \\Michael: Har ændret lidt hist og her - mangler stadig lidt arbejde}
