todo list er fjernet

--- a/Rapport/content/preamble.tex
+++ b/Rapport/content/preamble.tex
@@ -15,7 +15,8 @@
 \usepackage{subfig}
 \usepackage{wrapfig} 
 \usepackage[subfigure]{tocloft}
-\usepackage{todonotes}
+%\usepackage{todonotes}
+\usepackage[disable]{todonotes}
 \usepackage{lastpage} 
 \usepackage{lipsum,lastpage}  
 \usepackage{hanging}
