--- a/Rapport/content/indholdsfortegnelse.tex
+++ b/Rapport/content/indholdsfortegnelse.tex
@@ -2,8 +2,6 @@
 
 \tableofcontents
 %\addtocontents{toc}{~\hfill\textbf{Side}\par}
-\listoffigures
-\listoftables  
 
 \subsection*{Indhold i projektmappe}
 \begin{figure}[th!]
@@ -24,6 +22,8 @@ Koordinater til koden &test/koordinater\\
 \end{figure}
 
 Projektmappen findes på:  \url{https://github.com/mikkeljae/SDU_ROBTEK4_PAN-AND-TILT}.
-
+\clearpage
+\listoffigures
+\listoftables  
 
  \listoftodos
