--- a/Rapport/content/preamble.tex
+++ b/Rapport/content/preamble.tex
@@ -35,9 +35,9 @@
 \counterwithin{equation}{section}
 
 % % Tosidet margin:
-\usepackage[margin=2.5cm, inner =3cm,outer =2cm]{geometry}
+% \usepackage[margin=2.5cm, inner =3cm,outer =2cm]{geometry}
 % % Enkeltsidet magin: 
-% \usepackage[margin=2.5cm]{geometry}
+\usepackage[margin=2.5cm]{geometry}
 
 
 \usepackage{paralist}
